@@ -52,11 +52,11 @@ static char **argv = NULL;
 #endif /* TRU64 */
 
 unsigned char	nologin = 0;
-
 struct afp_options default_options;
 static AFPConfig *configs;
 static server_child *server_children;
 static sig_atomic_t reloadconfig = 0;
+static sig_atomic_t gotsigchld = 0;
 
 /* Two pointers to dynamic allocated arrays which store pollfds and associated data */
 static struct pollfd *fdset;
@@ -94,7 +94,11 @@ static void fd_set_listening_sockets(void)
             continue;
         fdset_add_fd(&fdset, &polldata, &fdset_used, &fdset_size, config->fd, LISTEN_FD, config);
     }
-    fdset_add_fd(&fdset, &polldata, &fdset_used, &fdset_size, disasociated_ipc_fd, DISASOCIATED_IPC_FD, NULL);
+
+    if (default_options.flags & OPTION_KEEPSESSIONS) {
+        LOG(log_note, logtype_afpd, "Activating continous service");
+        fdset_add_fd(&fdset, &polldata, &fdset_used, &fdset_size, disasociated_ipc_fd, DISASOCIATED_IPC_FD, NULL);
+    }
 }
  
 static void fd_reset_listening_sockets(void)
@@ -106,7 +110,9 @@ static void fd_reset_listening_sockets(void)
             continue;
         fdset_del_fd(&fdset, &polldata, &fdset_used, &fdset_size, config->fd);
     }
-    fdset_del_fd(&fdset, &polldata, &fdset_used, &fdset_size, disasociated_ipc_fd);
+
+    if (default_options.flags & OPTION_KEEPSESSIONS)
+        fdset_del_fd(&fdset, &polldata, &fdset_used, &fdset_size, disasociated_ipc_fd);
 }
 
 /* ------------------ */
@@ -127,7 +133,12 @@ static void afp_goaway(int sig)
             LOG(log_note, logtype_afpd, "AFP Server shutting down on SIGTERM");
             break;
         case SIGQUIT:
-            LOG(log_note, logtype_afpd, "AFP Server shutting down on SIGQUIT, NOT disconnecting clients");
+            if (default_options.flags & OPTION_KEEPSESSIONS) {
+                LOG(log_note, logtype_afpd, "AFP Server shutting down on SIGQUIT, NOT disconnecting clients");
+            } else {
+                LOG(log_note, logtype_afpd, "AFP Server shutting down on SIGQUIT");
+                sig = SIGTERM;
+            }
             break;
         }
         if (server_children)
@@ -154,13 +165,18 @@ static void afp_goaway(int sig)
         reloadconfig = 1;
         break;
 
+    case SIGCHLD:
+        /* w/ a configuration file, we can force a re-read if we want */
+        gotsigchld = 1;
+        break;
+
     default :
         LOG(log_error, logtype_afpd, "afp_goaway: bad signal" );
     }
     return;
 }
 
-static void child_handler(int sig _U_)
+static void child_handler(void)
 {
     int fd;
     int status, i;
@@ -273,7 +289,8 @@ int main(int ac, char **av)
     }
 #endif
     
-    sv.sa_handler = child_handler;
+    sv.sa_handler = afp_goaway; /* handler for all sigs */
+
     sigemptyset( &sv.sa_mask );
     sigaddset(&sv.sa_mask, SIGALRM);
     sigaddset(&sv.sa_mask, SIGHUP);
@@ -286,7 +303,6 @@ int main(int ac, char **av)
         exit(EXITERR_SYS);
     }
 
-    sv.sa_handler = afp_goaway;
     sigemptyset( &sv.sa_mask );
     sigaddset(&sv.sa_mask, SIGALRM);
     sigaddset(&sv.sa_mask, SIGTERM);
@@ -374,6 +390,7 @@ int main(int ac, char **av)
     afp_child_t *child;
     int fd[2];  /* we only use one, but server_child_add expects [2] */
     pid_t pid;
+    int saveerrno;
 
     /* wait for an appleshare connection. parent remains in the loop
      * while the children get handled by afp_over_{asp,dsi}.  this is
@@ -386,7 +403,13 @@ int main(int ac, char **av)
         pthread_sigmask(SIG_UNBLOCK, &sigs, NULL);
         ret = poll(fdset, fdset_used, -1);
         pthread_sigmask(SIG_BLOCK, &sigs, NULL);
-        int saveerrno = errno;
+        saveerrno = errno;
+
+        if (gotsigchld) {
+            gotsigchld = 0;
+            child_handler();
+            continue;
+        }
 
         if (reloadconfig) {
             nologin++;
@@ -445,7 +468,7 @@ int main(int ac, char **av)
                         fdset_del_fd(&fdset, &polldata, &fdset_used, &fdset_size, child->ipc_fds[0]);
                         close(child->ipc_fds[0]);
                         child->ipc_fds[0] = -1;
-                        if (child->disasociated) {
+                        if ((default_options.flags & OPTION_KEEPSESSIONS) && child->disasociated) {
                             LOG(log_note, logtype_afpd, "main: removing reattached child[%u]", child->pid);
                             server_child_remove(server_children, CHILD_DSIFORK, child->pid);
                         }
